syntax = "proto3";

package rv.data;

option csharp_namespace = "Pro.SerializationInterop.RVProtoData";
option swift_prefix = "RVData_";

import "basicTypes.proto";
import "action.proto";

message MacrosDocument {
  message Macro {
    .rv.data.UUID uuid = 1;
    string name = 2;
    .rv.data.Color color = 3;
    repeated .rv.data.Action actions = 4;
    bool trigger_on_startup = 5;
  }

  .rv.data.ApplicationInfo application_info = 1;
  repeated .rv.data.MacrosDocument.Macro macros = 2;
}

